--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/react-dom": "^18.2.5",
     "expo": "~48.0.18",
+    "expo-image": "~1.0.1",
+    "expo-linking": "~4.0.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "typescript": "^4.9.4"
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.2",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
