--- a/eas.json
+++ b/eas.json
@@ -12,6 +12,14 @@
         "buildType": "apk"
       }
     },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
     "production": {}
   },
   "submit": {
