--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/react-dom": "^18.2.5",
+    "@types/react-dom": "~18.0.10",
     "expo": "~48.0.18",
     "expo-image": "~1.0.1",
     "expo-linking": "~4.0.1",
@@ -25,7 +25,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
-    "typescript": "^5.1.3"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
